--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <div id="header">
-<p id="name">Deep Laxman Sukhwani</p>
-         <a href="mailto:deepsukhwani@gmail.com" target="_blank"><p id="email">deepsukhwani@gmail.com</p></a>
+<p id="name">Deep BHARATH S R</p>
+         <a href="mailto:srbharath41@gmail.com" target="_blank"><p id="email">srbharath41@gmail.com</p></a>
      </div>
      <div class="left">
      </div>
@@ -19,10 +19,7 @@
                 <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms.</li>
                 <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li></ul>
             </p>
-            <h3>Professional Experience</h3>
-            <h4 id="company-name">Wingify Software Pvt Ltd</h4>
-            <p id="job-title"><strong>Support Engineer (Technical Support)</strong></p>
-            <p id="job-responsibilities">Job Responsbilities</p>
+         
             <p>
             <ul>
                 <li>Answer customer queries over email / ticketing system</li>
@@ -42,25 +39,24 @@
                     <td>S.S.C</td>
                     <td>G.S.E.B India</td>
                     <td>75.57%</td>
-                    <td>2004</td>
+                    <td>2021</td>
                 </tr>
                 <tr>
                     <td>H.S.C (Science Stream)</td>
                     <td>G.S.E.B India</td>
                     <td>72.40%</td>
-                    <td>2006</td>
+                    <td>2018</td>
                 </tr>
                 <tr>
                     <td>GDCA (Grad. Dipl in Computer Applications)</td>
-                    <td>NIE (National Institute Of Engineering), Mumbai, India</td>
+                    <td>NIE (National Institute Of Engineering), hassan, India</td>
                     <td>A Grade</td>
-                    <td>2008</td>
+                    <td>2016</td>
                 </tr>
                 <tr>
-                    <td>B.Sc. (Hons) - Applied Accounting</td>
-                    <td>Oxford Brookes University</td>
-                    <td>2:1 – Upper Second Class Honours</td>
-                    <td>2012</td>
+                    <td>B.c.a. (Hons) - computer application</td>
+                    <td>mysore University</td>
+                    
                 </tr>
                 <tr>
                     <td>Chartered Accounting - ACCA</td>
@@ -75,7 +71,7 @@
                 <li>
                 <span id="course-name">HTML & CSS for Beginners – Web Fundamentals</span> – Codecademy.com</li>
                 <li>
-                <span id="course-name">Python – Fundamentals and Dynamic Programming </span> - Codecademy.com</li>
+                <span id="course-name">Python – core java</span> - qspider</li>
                 <li>
                 <span id="course-name">JavaScript – Programming Basics, JS Apps and Build Games </span> - Codecademy.com</li>
                 <li>
