--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="header">
-<p id="name">Deep BHARATH S R</p>
+<p id="name"> BHARATH S R</p>
          <a href="mailto:srbharath41@gmail.com" target="_blank"><p id="email">srbharath41@gmail.com</p></a>
      </div>
      <div class="left">
