--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h3>CV Highlights</h3>
             <p>
             <ul>
-                <li>Currently going through CS253 – Web Application Engineering and CS61A – Structure & Interpretation of Computer Programs</li>
-                <li>Learnt basic Python, JavaScript, HTML, CSS on Codecademy.com.</li>
+                <li>Currently am doing software testing course in QSPIDER rajajinagar - banglore</li>
+                <li>core java , mannul testing , sql </li>
                 <li>An independent, dedicated, efficient person. These attributes are proved through the series of courses I have taken or I am taking as of now independently through online platforms.</li>
                 <li>Good Communication Skills, Presentation Skills, attitude towards leadership, authorisation and delegation, conflict resolution and negotiation and a very good team worker.</li></ul>
             </p>
@@ -36,15 +36,15 @@
                     <td>Year</td>
                 </tr>
                 <tr>
-                    <td>S.S.C</td>
-                    <td>G.S.E.B India</td>
-                    <td>75.57%</td>
+                    <td>B.C.A</td>
+                    <td>mysore university</td>
+                    <td>73.57%</td>
                     <td>2021</td>
                 </tr>
                 <tr>
-                    <td>H.S.C (Science Stream)</td>
-                    <td>G.S.E.B India</td>
-                    <td>72.40%</td>
+                    <td>PCMB</td>
+                    <td>GBJC TIPTUR</td>
+                    <td>68%</td>
                     <td>2018</td>
                 </tr>
                 <tr>
